# ai-trip-planner

./: .gitignore  ARCHITECTURE.md  BLOG_POST.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE 2.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  GOOGLE_PLACES_INTEGRATION.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_START.md  RAILWAY_VARIABLES_SETUP.md  RAILWAY_WEASYPRINT_FIX.md  README.md  SECURITY.md  SECURITY_SUMMARY.md  STREAMLIT_DEPLOY.md  VERCEL_DEPLOYMENT.md  VERCEL_ROOT_DIRECTORY_GUIDE.md  app.py  packages 2.txt  packages.txt  pyproject.toml  requirements.txt  security_config 2.py  security_config.py  test_complete_api.sh  test_pdf_generation.sh  test_results.sh  vercel.json
.streamlit/: config 2.toml  config.toml  secrets.toml.example
assets/: README.md  preview-template.html
backend/: .gitignore  Dockerfile  README.md  TESTING_LOCALLY.md  main.py  nixpacks.toml  railway.json  requirements 2.txt  requirements.txt  run.py  security_config.py  test_local_crew.py  test_urls.py
backend/output/: trip_plan.html
backend/src/trip_planner/: README_VERSION_SWITCHING.md  __init__.py  crew.py  crew.py.backup  google_places.py  google_places_tools.py
frontend/: .npmrc  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: PlanningProgressPlaceholder.tsx  ProgressTracker.tsx  TripForm.tsx  TripResult.tsx  UsageStats.tsx  WelcomeSection.tsx
output/: example_trip_plan 2.html  trip_plan.html
trip_planner/: .gitignore  README.md
trip_planner/.streamlit/: packages.txt
trip_planner/assets/: generate_preview.py
(+4 files in other folders)
